Login Success vs 2

--- a/Login/log.html
+++ b/Login/log.html
@@ -1717,28 +1717,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,35814],[],[[4,0,1,0,[],[1,17201,18613],[[0,5,6,0,0,0,0,0,[1,17201,4218],[[0,7,8,0,0,0,0,0,[1,17201,2750],[[0,9,10,0,11,12,0,0,[1,17201,2734],[],[[17201,2,13]]]],[]],[0,14,6,0,0,0,0,0,[1,19951,906],[[0,15,10,0,16,17,0,0,[1,19951,906],[],[[19951,2,18]]]],[]],[0,19,6,0,0,0,0,0,[1,20857,562],[[0,15,10,0,16,20,0,0,[1,20857,547],[],[[20873,2,21]]]],[]]],[]],[0,22,0,0,0,0,0,0,[1,21419,2141],[[0,23,10,0,24,25,0,0,[1,21419,1657],[],[[21419,2,26]]],[0,23,10,0,24,27,0,0,[1,23091,469],[],[[23091,2,28]]]],[]],[0,29,6,0,0,0,0,0,[1,23560,313],[[0,15,10,0,16,30,0,0,[1,23560,313],[],[[23560,2,31]]]],[]],[0,32,6,0,0,0,0,0,[1,23873,11800],[[0,15,10,0,16,33,0,0,[1,23873,11785],[],[[23873,2,34]]]],[]],[0,35,10,0,36,37,0,0,[1,35673,141],[],[]]]]],[[1,38,8,0,0,0,0,0,[1,437,16764],[[0,39,10,0,40,12,0,0,[1,437,16764],[],[[437,2,41]]]],[]]],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,36757],[],[[4,0,1,0,[],[1,17692,19057],[[0,5,6,0,0,0,0,0,[1,17701,4671],[[0,7,8,0,0,0,0,0,[1,17702,3064],[[0,9,10,0,11,12,0,0,[1,17703,3062],[],[[17704,2,13]]]],[]],[0,14,6,0,0,0,0,0,[1,20767,948],[[0,15,10,0,16,17,0,0,[1,20769,944],[],[[20776,2,18]]]],[]],[0,19,6,0,0,0,0,0,[1,21716,655],[[0,20,10,0,21,22,0,0,[1,21718,276],[],[]],[0,15,10,0,16,22,0,0,[1,21995,375],[],[[21996,2,23]]]],[]]],[]],[0,24,0,0,0,0,0,0,[1,22374,2153],[[0,25,10,0,26,27,0,0,[1,22376,1846],[],[[22377,2,28]]],[0,25,10,0,26,29,0,0,[1,24223,303],[],[[24225,2,30]]]],[]],[0,31,6,0,0,0,0,0,[1,24529,290],[[0,15,10,0,16,32,0,0,[1,24531,287],[],[[24533,2,33]]]],[]],[0,34,6,0,0,0,0,0,[1,24820,11806],[[0,15,10,0,16,35,0,0,[1,24821,11803],[],[[24822,2,36]]]],[]],[0,37,10,0,38,39,0,0,[1,36628,119],[],[]]]]],[[1,40,8,0,0,0,0,0,[1,382,17310],[[0,41,10,0,42,12,0,0,[1,383,17307],[],[[384,2,43]]]],[]]],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginSuccess.robot","*LoginSuccess.robot","*Login Success","*Go To Login Page","*LoginKeywords","*Open Website","*keywords","*Go To","*Selenium2Library","*<p>Navigates the active browser instance to the provided URL.\x3c/p>","*${WEBSITE}","*Opening url '<a href=\"https://sprint3r6.wordpress.com\">https://sprint3r6.wordpress.com\x3c/a>'","*Click More Tab","*Click Element","*<p>Click element identified by `locator`.\x3c/p>","*//*[@id=\"masthead\"]/button","*Clicking element '//*[@id=\"masthead\"]/button'.","*Click Login Link","*//*[@id=\"meta-2\"]/ul/li[2]/a","*Clicking element '//*[@id=\"meta-2\"]/ul/li[2]/a'.","*Fill Valid Credentials","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*log, ${VALID_USERNAME}","*Typing text 'sprint3r6' into text field 'log'","*user_pass, ${VALID_PASSWORD}","*Typing text 'WorkingSoftware' into text field 'user_pass'","*Disable Remember Me","*rememberme","*Clicking element 'rememberme'.","*Try Login","*wp-submit","*Clicking element 'wp-submit'.","*Wait Until Page Contains","*<p>Waits until `text` appears on current page.\x3c/p>","*Dashboard","*Open Browser To Website","*Open Browser","*<p>Opens a new browser instance to given URL.\x3c/p>","*Opening browser 'firefox' to base url '<a href=\"https://sprint3r6.wordpress.com\">https://sprint3r6.wordpress.com\x3c/a>'"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginSuccess.robot","*LoginSuccess.robot","*Login Success","*Go To Login Page","*LoginKeywords","*Open Website","*keywords","*Go To","*Selenium2Library","*<p>Navigates the active browser instance to the provided URL.\x3c/p>","*${WEBSITE}","*Opening url '<a href=\"https://sprint3r6.wordpress.com\">https://sprint3r6.wordpress.com\x3c/a>'","*Click More Tab","*Click Element","*<p>Click element identified by `locator`.\x3c/p>","*//*[@id=\"masthead\"]/button","*Clicking element '//*[@id=\"masthead\"]/button'.","*Click Login Link","*Wait Until Element Is Visible","*<p>Waits until element specified with `locator` is visible.\x3c/p>","*//*[@id=\"meta-2\"]/ul/li[2]/a","*Clicking element '//*[@id=\"meta-2\"]/ul/li[2]/a'.","*Fill Valid Credentials","*Input Text","*<p>Types the given `text` into text field identified by `locator`.\x3c/p>","*user_login, ${VALID_USERNAME}","*Typing text 'sprint3r6' into text field 'user_login'","*user_pass, ${VALID_PASSWORD}","*Typing text 'WorkingSoftware' into text field 'user_pass'","*Disable Remember Me","*//*[@id=\"rememberme\" and @checked='checked']","*Clicking element '//*[@id=\"rememberme\" and @checked='checked']'.","*Try Login","*wp-submit","*Clicking element 'wp-submit'.","*Wait Until Page Contains","*<p>Waits until `text` appears on current page.\x3c/p>","*Dashboard","*Open Browser To Website","*Open Browser","*<p>Opens a new browser instance to given URL.\x3c/p>","*Opening browser 'firefox' to base url '<a href=\"https://sprint3r6.wordpress.com\">https://sprint3r6.wordpress.com\x3c/a>'"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:36","fail":0,"id":"s1","label":"LoginSuccess","name":"LoginSuccess","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:37","fail":0,"id":"s1","label":"LoginSuccess","name":"LoginSuccess","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1455097604870;
+window.output["baseMillis"] = 1455098525865;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 35130;
+window.output["generatedMillis"] = 36135;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160210 16:47:20 GMT +08:00";
+window.output["generatedTimestamp"] = "20160210 17:02:42 GMT +08:00";
 </script>
 <script type="text/javascript">
 window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
