--- a/Login/report.html
+++ b/Login/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,65726],[],[[4,0,1,0,[],[1,14975,8890],[]],[5,0,1,0,[],[1,23865,8199],[]],[6,0,1,0,[],[1,32070,8405],[]],[7,0,1,0,[],[1,40481,8080],[]],[8,0,1,0,[],[1,48567,8168],[]],[9,0,1,0,[],[1,56740,8424],[]]],[],[6,6,6,6]];
+window.output["suite"] = [1,2,3,0,[],[1,0,91912],[],[[4,0,1,0,[],[1,567,33891],[]],[5,0,1,0,[],[1,34465,57441],[]]],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginFail","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginFail.robot","*LoginFail.robot","*Login Fail with Invalid username and password","*Login Fail With valid username and invalid password","*Login Fail With invalid username and valid password","*Login Fail With empty username and valid password","*Login Fail With valid username and empty password","*Login Fail With empty username and empty password"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginSuccess.robot","*LoginSuccess.robot","*Login Success With No Remember Me","*Login Success With Remember Me"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":0,"label":"Critical Tests","pass":6},{"elapsed":"00:00:50","fail":0,"label":"All Tests","pass":6}],[],[{"elapsed":"00:01:06","fail":0,"id":"s1","label":"LoginFail","name":"LoginFail","pass":6}]];
+window.output["stats"] = [[{"elapsed":"00:01:31","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:01:31","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:01:32","fail":0,"id":"s1","label":"LoginSuccess","name":"LoginSuccess","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1455163454196;
+window.output["baseMillis"] = 1455166015359;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 65804;
+window.output["generatedMillis"] = 91641;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160211 11:05:20 GMT +08:00";
+window.output["generatedTimestamp"] = "20160211 11:48:27 GMT +08:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
