--- a/report.html
+++ b/report.html
@@ -1557,25 +1557,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,101033],[[4,5,4,0,[],[1,62,100955],[[6,7,8,0,[],[1,78,68065],[],[[9,0,1,0,[],[1,15349,9638],[]],[10,0,1,0,[],[1,24987,8378],[]],[11,0,1,0,[],[1,33371,8287],[]],[12,0,1,0,[],[1,41665,8124],[]],[13,0,1,0,[],[1,49794,8281],[]],[14,0,1,0,[],[1,58081,9510],[]]],[],[6,6,6,6]],[15,16,17,0,[],[1,68176,32841],[],[[18,0,1,0,[],[1,82927,17396],[]]],[],[1,1,1,1]]],[],[],[7,7,7,7]]],[],[],[7,7,7,7]];
+window.output["suite"] = [1,2,3,0,[],[0,0,357975],[[4,5,4,0,[],[1,86,148325],[[6,7,8,0,[],[1,95,64095],[],[[9,0,1,0,[],[1,14495,9320],[]],[10,0,1,0,[],[1,23822,8258],[]],[11,0,1,0,[],[1,32084,8594],[]],[12,0,1,0,[],[1,40683,7489],[]],[13,0,1,0,[],[1,48178,7636],[]],[14,0,1,0,[],[1,55821,7831],[]]],[],[6,6,6,6]],[15,16,17,0,[],[1,64213,84184],[],[[18,0,1,0,[],[1,64247,32093],[]],[19,0,1,0,[],[1,96345,52045],[]]],[],[2,2,2,2]]],[],[],[8,8,8,8]],[20,21,20,0,[],[0,148425,209538],[[22,23,24,0,[],[0,148435,209516],[],[[25,0,1,0,[],[0,183840,81680,26],[]],[27,0,1,0,[],[1,265564,91424],[]]],[],[2,1,2,1]]],[],[],[2,1,2,1]]],[],[],[10,9,10,9]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Wordpress","*C:\\Users\\user\\Documents\\WebDemo\\wordpress","*.","*Login","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login","*LoginFail","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginFail.robot","*Login/LoginFail.robot","*Login Fail with Invalid username and password","*Login Fail With valid username and invalid password","*Login Fail With invalid username and valid password","*Login Fail With empty username and valid password","*Login Fail With valid username and empty password","*Login Fail With empty username and empty password","*LoginSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginSuccess.robot","*Login/LoginSuccess.robot","*Login Success With No Remember Me"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Wordpress","*C:\\Users\\user\\Documents\\WebDemo\\wordpress","*.","*Login","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login","*LoginFail","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginFail.robot","*Login/LoginFail.robot","*Login Fail with Invalid username and password","*Login Fail With valid username and invalid password","*Login Fail With invalid username and valid password","*Login Fail With empty username and valid password","*Login Fail With valid username and empty password","*Login Fail With empty username and empty password","*LoginSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Login\\LoginSuccess.robot","*Login/LoginSuccess.robot","*Login Success With No Remember Me","*Login Success With Remember Me","*Post","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Post","*PostSuccess","*C:\\Users\\user\\Documents\\WebDemo\\wordpress\\Post\\PostSuccess.robot","*Post/PostSuccess.robot","*Post Content Success With Title and Text Content","*Element locator '//button[@class=\"editor-delete-post\"]' did not match any elements after 15 seconds","*Post Content Success With Title and Text Image Content"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:10","fail":0,"label":"Critical Tests","pass":7},{"elapsed":"00:01:10","fail":0,"label":"All Tests","pass":7}],[],[{"elapsed":"00:01:41","fail":0,"id":"s1","label":"Wordpress","name":"Wordpress","pass":7},{"elapsed":"00:01:41","fail":0,"id":"s1-s1","label":"Wordpress.Login","name":"Login","pass":7},{"elapsed":"00:01:08","fail":0,"id":"s1-s1-s1","label":"Wordpress.Login.LoginFail","name":"LoginFail","pass":6},{"elapsed":"00:00:33","fail":0,"id":"s1-s1-s2","label":"Wordpress.Login.LoginSuccess","name":"LoginSuccess","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:05:06","fail":1,"label":"Critical Tests","pass":9},{"elapsed":"00:05:06","fail":1,"label":"All Tests","pass":9}],[],[{"elapsed":"00:05:58","fail":1,"id":"s1","label":"Wordpress","name":"Wordpress","pass":9},{"elapsed":"00:02:28","fail":0,"id":"s1-s1","label":"Wordpress.Login","name":"Login","pass":8},{"elapsed":"00:01:04","fail":0,"id":"s1-s1-s1","label":"Wordpress.Login.LoginFail","name":"LoginFail","pass":6},{"elapsed":"00:01:24","fail":0,"id":"s1-s1-s2","label":"Wordpress.Login.LoginSuccess","name":"LoginSuccess","pass":2},{"elapsed":"00:03:30","fail":1,"id":"s1-s2","label":"Wordpress.Post","name":"Post","pass":1},{"elapsed":"00:03:30","fail":1,"id":"s1-s2-s1","label":"Wordpress.Post.PostSuccess","name":"PostSuccess","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1455164000486;
+window.output["baseMillis"] = 1455182760830;
 </script>
 <script type="text/javascript">
-window.output["generatedMillis"] = 100514;
+window.output["generatedMillis"] = 358170;
 </script>
 <script type="text/javascript">
-window.output["generatedTimestamp"] = "20160211 11:15:01 GMT +08:00";
+window.output["generatedTimestamp"] = "20160211 16:31:59 GMT +08:00";
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
